<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.pcgamingfreaks</groupId>
	<artifactId>ResourcePackHelper</artifactId>
	<version>0.1-SNAPSHOT</version>

	<scm>
		<connection>scm:git:git@github.com:GeorgH93/ResourcePackHelper.git</connection>
		<developerConnection>scm:git:git@github.com:GeorgH93/ResourcePackHelper.git</developerConnection>
		<url>git@github.com:GeorgH93/ResourcePackHelper.git</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/GeorgH93/ResourcePackHelper/issues</url>
	</issueManagement>
	<ciManagement>
		<system>jenkins</system>
		<url>https://ci.pcgamingfreaks.at/job/ResourcePackHelper/</url>
	</ciManagement>

	<name>ResourcePackHelper</name>
	<description>ResourcePackHelper is an add-on to the Residence plugin that allows to automatically create sub-zones.</description>
	<url>https://github.com/GeorgH93/ResourcePackHelper/</url>
	<inceptionYear>2020</inceptionYear>
	<licenses>
		<license>
			<name>GNU General Public License (GPL) v3</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<properties>
		<author>GeorgH93</author>
		<version>${project.version}</version>
		<dependencies>PCGF_PluginLib</dependencies>
		<mainClass>${project.groupId}.${project.artifactId}.Bukkit.${project.artifactId}</mainClass>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<sonar.organization>georgh93</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<repositories>
		<repository>
			<id>pcgf-repo</id>
			<url>https://repo.pcgamingfreaks.at/repository/maven-everything/</url>
		</repository>
		<repository>
			<id>spigot-nexus</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Bukkit -->
		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.15.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- PCGF Plugin Lib -->
		<dependency>
			<groupId>at.pcgamingfreaks</groupId>
			<artifactId>PluginLib</artifactId>
			<version>1.0.38-SNAPSHOT</version>
		</dependency>
		<!-- BadRabbit -->
		<dependency>
			<groupId>at.pcgamingfreaks</groupId>
			<artifactId>BadRabbit-Bukkit</artifactId>
			<version>1.11</version>
		</dependency>
		<!-- ClientStats -->
		<dependency>
			<groupId>fr.onecraft</groupId>
			<artifactId>clientstats</artifactId>
			<version>2.10.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>clean package</defaultGoal>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test/src</testSourceDirectory>
		<resources>
			<resource>
				<directory>resources</directory>
				<filtering>true</filtering>
			</resource>
			<resource>
				<directory>./</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
			<resource>
				<directory>${project.build.directory}/generated-resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Resolve lombok -->
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.10.0</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ExcludeBadRabbit</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.1.2</version>
						<executions>
							<execution>
								<id>default-jar</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>at/pcgamingfreaks/ResourcePackHelper/Bukkit/ResourcePackHelperBadRabbit.class</exclude>
									</excludes>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>Standalone</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<version>${project.version}-Standalone</version>
				<dependencies/>
				<mainClass>${project.groupId}.${project.artifactId}Standalone.Bukkit.${project.artifactId}</mainClass>
			</properties>
			<build>
				<plugins>
					<!-- Shades some required libs into the final jar -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<shadedArtifactAttached>true</shadedArtifactAttached>
									<shadedClassifierName>Standalone</shadedClassifierName>
									<createDependencyReducedPom>false</createDependencyReducedPom>
									<minimizeJar>true</minimizeJar>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<artifactSet>
										<includes>
											<include>at.pcgamingfreaks:PluginLib</include>
										</includes>
									</artifactSet>
									<relocations>
										<relocation>
											<pattern>at.pcgf.libs</pattern>
											<shadedPattern>at.pcgamingfreaks.ResourcePackHelperStandalone.libs</shadedPattern>
										</relocation>
										<relocation>
											<pattern>at.pcgamingfreaks.ResourcePackHelper</pattern>
											<shadedPattern>at.pcgamingfreaks.ResourcePackHelperStandalone</shadedPattern>
										</relocation>
										<relocation>
											<pattern>at.pcgamingfreaks</pattern>
											<shadedPattern>at.pcgamingfreaks.ResourcePackHelperStandalone.libs.at.pcgamingfreaks</shadedPattern>
										</relocation>
									</relocations>
									<filters>
										<filter>
											<artifact>at.pcgamingfreaks:PluginLib</artifact>
											<excludes>
												<exclude>*.yml</exclude>
											</excludes>
										</filter>
									</filters>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<!-- Replace all the PCGF-PluginLib code with alternatives -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>munge-maven-plugin</artifactId>
						<version>1.0</version>
						<executions>
							<execution>
								<id>munge</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>munge</goal>
								</goals>
								<configuration>
									<symbols>STANDALONE</symbols>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>Release</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<version>${project.version}-Release</version>
				<dependencies>softdepend: [ PCGF_PluginLib ]</dependencies>
				<mainClass>${project.groupId}.${project.artifactId}.Bukkit.${project.artifactId}BadRabbit</mainClass>
			</properties>
			<dependencies>
				<dependency>
					<groupId>at.pcgamingfreaks</groupId>
					<artifactId>ResourcePackHelper</artifactId>
					<version>${project.version}</version>
					<classifier>Standalone</classifier>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<shadedArtifactAttached>true</shadedArtifactAttached>
									<shadedClassifierName>Release</shadedClassifierName>
									<createDependencyReducedPom>false</createDependencyReducedPom>
									<minimizeJar>false</minimizeJar>
									<artifactSet>
										<includes>
											<include>at.pcgamingfreaks:BadRabbit</include>
											<include>at.pcgamingfreaks:ResourcePackHelper</include>
										</includes>
									</artifactSet>
									<relocations>
										<relocation>
											<pattern>at.pcgamingfreaks.BadRabbit</pattern>
											<shadedPattern>at.pcgamingfreaks.ResourcePackHelper</shadedPattern>
										</relocation>
									</relocations>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>license-maven-plugin</artifactId>
						<version>1.20</version>
						<configuration>
							<excludedScopes>test,provided,system</excludedScopes>
							<generateBundle>true</generateBundle>
							<licensesOutputFile>${project.build.directory}/generated-resources/licenses-THIRD-PARTY.xml</licensesOutputFile>
						</configuration>
						<executions>
							<execution>
								<id>add-third-party</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>add-third-party</goal>
									<goal>download-licenses</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>https://repo.pcgamingfreaks.at/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://repo.pcgamingfreaks.at/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project>
